# coevol

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  readme.md
app/: DirichletNormalCodonUsageSelectionMS.cpp  DirichletNormalCodonUsageSelectionModelMS.hpp  TraceComp.cpp
data/: myseq.seq  mytree.tree  test.data
data/archaea/: archaea.exptemp  prot.basis  prot.comp  prot.reducedcomp  rna.itgc  tree
data/c3c4/: C4Amaranthaceae.ali  C4Amaranthaceae.photoregime  C4Amaranthaceae.tree  C4AmaranthaceaePolyroot.alloctree  C4AmaranthaceaePolyroot.tree  C4Amaranthaceaeshort.ali  README.txt  command
data/eutheria105/: chronoeutheria105.tree  eutheria105.calib  eutheria105brca2.ali  eutheria105nuc.ali  eutheria138mass.ali  example.script
data/eutheria138/: chronoeutheria138b.tree  eutheria138.calib  eutheria138brca2.ali  example.script
data/plac/: calib  plac.ali  plac.calib  plac.lht  plac.mass  plac4fold.ali  script
data/primatesNe/: README  hyperprim.lht  hyperprim3.lht  hyperprim3withdaub.lht  nohyperprim.lht  prim.calib  prim.lht  prim.phy  prim.rootedtree  primbd.sh  primmodel0.sh  primmodel0diag.sh  primmodel1.sh  primmodelbd1.sh
doc/: folder-list.md
include/core/: BaseType.hpp  Chrono.hpp  DAGnode.hpp  Exception.hpp  MCMC.hpp  Move.hpp  ProbModel.hpp  Random.hpp  RandomTypes.hpp  Var.hpp
include/diffsel/: AbstractTree.hpp  AllocationTree.hpp  BiologicalSequences.hpp  BranchProcess.hpp  BranchSitePath.hpp  BranchSiteSubstitutionProcess.hpp  Chain.hpp  CodonSequenceAlignment.hpp  CodonStateSpace.hpp  CodonSubMatrix.hpp  Conjugate.hpp  ConjugateInverseWishart.hpp  ContinuousData.hpp  CovMatrix.hpp  DirichletNormalCodonUsageSelectionModelMS.hpp  EmpiricalSubMatrix.hpp  GTRSubMatrix.hpp  GenericTimeLine.hpp  GlobalScalingFunction.hpp  IID.hpp  IIDNormalIIDArray.hpp  InverseWishartMatrix.hpp  Jeffreys.hpp  MSCodonSubMatrix.hpp  Normal.hpp  OneMatrixPhyloProcess.hpp  PhyloProcess.hpp  ProfileConjugatePath.hpp  RandomBranchSitePath.hpp  RandomSubMatrix.hpp  SelectionPhyloProcess.hpp  SequenceAlignment.hpp  SiteMapping.hpp  StateSpace.hpp  StringStreamUtils.hpp  SubMatrix.hpp  TaxonSet.hpp  Tree.hpp  ValArray.hpp  ValTree.hpp
include/utils/: Random.hpp  StringStreamUtils.hpp  linalg.hpp
mini-coevol/: AncestralData.h  AutoRegressiveMultiVariateTreeProcess.h  BrownianBridge.cpp  BrownianModel.cpp  BrownianMove.h  CodonSequenceAlignment.h  CodonStateSpace.cpp  ConjugateGTRModel.cpp  ConjugateGammaTree.h  ConjugateInverseWishart.h  DAGnode.cpp  EmpiricalSubMatrix.h  EvolutionGCBrownianProcess.h  EvolutionNucBrownianProcess.h  EvolutionSegmentedProcess.h  GeneralSegmentedConjugatePath.h  GenericTimeLine.h  InverseWishartMatrix.h  MG3OmegaCodonSubMatrix.h  MGAAProfileMutSelCodonSubMatrix.h  MGCodonAAProfileMutSelCodonSubMatrix.cpp  MGCodonAAProfileMutSelCodonSubMatrix.h  MGCodonProfileMutSelCodonSubMatrix.h  Move.cpp.bk  Move.h.bk  ProbModel.cpp  RandomBranchSitePath.cpp  RandomBrownianPath.h  Sample.cpp  SequenceAlignment.cpp  SiteMapping.cpp  SplitAAMatrix.h  StringStreamUtils.h  cscope.out  global.h
perf/: graph1.ps  llvmcov-diffsel-1it.profdata  report_1490799810
plscripts/: absdiff.pl  all.pl  allfromfasta.pl  allfromphy.pl  cisize.pl  concat.pl  concatphy.pl  exp.pl  fas2phy.pl  greporders.pl  jacknife.pl  missing.pl  omega.pl  pasteanc.pl  pastecont.pl  pastecont2.pl  sort.pl  subtax.pl
results/: report_1490879250  toy_10k_1.trace  toy_10k_2.trace
script/: trace-analyzer
sources/: .exrc  2  :make  AAProfileMutSel.cpp  AAProfileMutSelInfMix.cpp  AAProfileMutSelMatInfMixModel.h  AAProfileMutSelMatMixModel.h  AAProfileMutSelMatrixInfiniteMixture.h  AAProfileMutSelMixtureRandomMatrix.h  AAProfileMutSelMixtureRandomMatrixTree.h  ACGTProcess.h  AIS.h  ARMA.h  ASArrays.cpp  AllocationTree.h  AlphaStableProcess.h  AminoAcidMatrixTree.h  AminoAcidOmegaModel.h  AminoAcidOmegaSubMatrix.cpp  AncestralCovariance.cpp  AncestralCovarianceModel.h  AutoRegressiveNormalTreeProcess.h  AutocorrelatedProcess.h  AuxCoevol.h  BDCalibratedChronogram.h  BDChronogram.h  BDChronogram.h.bk  BDLogN.cpp  BDPriorChrono.cpp  BGC.cpp  BGC.h  BGCCpGSubMatrix.h  BGCModel.h  BGCModelwoLinReg.h  BGCSubMatrix.h  BaseType.cpp  BaseType.h  BetaKappaMove.h  BiologicalSequences.h  Branch.cpp  (+383 more)
sources/drawexport/: BiologicalSequences.h  drawtree
sources/drawtree/: DrawTree.cpp  DrawTree.h  DrawTreeMain.cpp
sources/genomega/: BranchGenOmega.cpp  BranchGenOmegaModel.h  BranchGenOmegaModelPerBranch.h  BranchGenOmegaPerBranch.cpp  BranchOmega.cpp  BranchOmegaGC.cpp  BranchOmegaGCModel.h  BranchOmegaIID.cpp  BranchOmegaIIDModel.h  BranchOmegaModel.h  ReadBranchGenOmega.cpp  ReadBranchOmega.cpp  ReadBranchOmegaIID.cpp
sources/mix/: BranchMatrixMixture.h  GCMatMixMG.cpp  GCMixMG.cpp  GamMix.cpp  MatMixMG.cpp  MatrixMixture.h  MixMG.cpp  Mixture.h  Mixturepointers.h
sources/mutsel/: AAMutSel.cpp  AAMutSelMatMixModel.h  AAMutSelModel.h  AAMutSelPopSizeModel.h  ACGTPopSizeAAMutSel.cpp  ACGTPopSizeAAMutSelMatMixModel.h  ACGTPopSizeAAReducedMutSel.cpp  ACGTPopSizeAAReducedMutSelModel.h  BGCAAMutSelMatMixModel.h  BGCModel.h  (+32 more)
src/: AbstractTree.hpp  AminoAcidOmegaSubMatrix.cpp  AminoAcidOmegaSubMatrix.hpp  AncestralData.hpp  AutoRegressiveMultiVariateTreeProcess.hpp  BaseType.cpp  BaseType.hpp  BiologicalSequences.hpp  BranchProcess.hpp  BranchSitePath.cpp  BranchSitePath.h  BranchSitePath.hpp  BranchSiteSubstitutionProcess.hpp  BrownianBridge.cpp  BrownianBridge.hpp  BrownianModel.cpp  BrownianModel.hpp  BrownianMove.hpp  BrownianProcess.cpp  BrownianProcess.hpp  Chain.cpp  Chain.hpp  Chrono.h  Chronogram.h  Chronogram.hpp  CodonSequenceAlignment.cpp  CodonSequenceAlignment.hpp  CodonStateSpace.cpp  CodonStateSpace.hpp  CodonSubMatrix.cpp  CodonSubMatrix.hpp  CommutativeBrownianProcess.hpp  Conjugate.h  Conjugate.hpp  ConjugateGTRModel.cpp  ConjugateGTRModel.hpp  ConjugateGammaTree.hpp  ConjugateInverseWishart.hpp  ConjugateMultiVariateTreeProcess.h  ConjugateMultiVariateTreeProcess.hpp  (+107 more)
test/: CustomDoubleMove.cpp  CustomSimpleMove.cpp  PoissonGamma.cpp  TestUtils.hpp  diffsel-check.py
(+215 files in other folders)
